// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`accepts correct password 1`] = `
<form
  autoComplete="off"
  onSubmit={[Function]}
>
  <div
    className="Box-root HorizontalGutter-root SignInWithEmail-container HorizontalGutter-full"
  >
    <div
      className="SignInWithEmail-field"
    >
      <div
        className="Box-root HorizontalGutter-root FormField-root HorizontalGutter-spacing-2"
      >
        <label
          className="InputLabel-root"
          htmlFor="email"
        >
          Email Address
        </label>
        <div
          className="TextField-root TextField-fullWidth"
        >
          <input
            className="TextField-input TextField-colorError"
            data-testid="email-field"
            disabled={false}
            id="email"
            name="email"
            onBlur={[Function]}
            onChange={[Function]}
            onFocus={[Function]}
            placeholder="Email Address"
            type="text"
            value=""
          />
        </div>
        <div
          className="Message-root Message-colorError Message-fullWidth"
        >
          <i
            aria-hidden="true"
            className="Icon-root Icon-sm MessageIcon-root"
          >
            warning
          </i>
          <span>
            This field is required.
          </span>
        </div>
      </div>
    </div>
    <div
      className="SignInWithEmail-field"
    >
      <div
        className="Box-root HorizontalGutter-root FormField-root HorizontalGutter-spacing-2"
      >
        <label
          className="InputLabel-root"
          htmlFor="password"
        >
          Password
        </label>
        <div
          className="PasswordField-fullWidth PasswordField-root"
        >
          <div
            className="PasswordField-wrapper"
          >
            <input
              autoCapitalize="off"
              autoComplete="off"
              autoCorrect="off"
              className="PasswordField-colorRegular PasswordField-fullWidth PasswordField-input"
              data-testid="password-field"
              disabled={false}
              id="password"
              name="password"
              onBlur={[Function]}
              onChange={[Function]}
              onFocus={[Function]}
              placeholder="Password"
              spellCheck={false}
              type="password"
              value="testtest"
            />
            <div
              className="PasswordField-icon"
              onClick={[Function]}
              onKeyUp={[Function]}
              role="button"
              tabIndex={0}
              title="Show password"
            >
              <i
                aria-hidden="true"
                className="Icon-root Icon-sm"
              >
                visibility
              </i>
            </div>
          </div>
        </div>
        <div
          className="Box-root Flex-root Flex-flex Flex-justifyFlexEnd"
        >
          <a
            className="SignInWithEmail-textLink"
            href="/admin/forgot-password"
            onClick={[Function]}
          >
            Forgot your password?
          </a>
        </div>
      </div>
    </div>
    <button
      className="BaseButton-root Button-root Button-sizeLarge Button-colorRegular Button-variantRegular Button-uppercase Button-fullWidth"
      data-color="regular"
      data-variant="regular"
      disabled={false}
      onBlur={[Function]}
      onFocus={[Function]}
      onMouseOut={[Function]}
      onMouseOver={[Function]}
      onTouchEnd={[Function]}
      type="submit"
    >
      <i
        aria-hidden="true"
        className="Icon-root Icon-md ButtonIcon-root"
      >
        email
      </i>
      <span>
        Sign in with Email
      </span>
    </button>
  </div>
</form>
`;

exports[`accepts valid email 1`] = `
<form
  autoComplete="off"
  onSubmit={[Function]}
>
  <div
    className="Box-root HorizontalGutter-root SignInWithEmail-container HorizontalGutter-full"
  >
    <div
      className="SignInWithEmail-field"
    >
      <div
        className="Box-root HorizontalGutter-root FormField-root HorizontalGutter-spacing-2"
      >
        <label
          className="InputLabel-root"
          htmlFor="email"
        >
          Email Address
        </label>
        <div
          className="TextField-root TextField-fullWidth"
        >
          <input
            className="TextField-input TextField-colorRegular"
            data-testid="email-field"
            disabled={false}
            id="email"
            name="email"
            onBlur={[Function]}
            onChange={[Function]}
            onFocus={[Function]}
            placeholder="Email Address"
            type="text"
            value="hans@test.com"
          />
        </div>
      </div>
    </div>
    <div
      className="SignInWithEmail-field"
    >
      <div
        className="Box-root HorizontalGutter-root FormField-root HorizontalGutter-spacing-2"
      >
        <label
          className="InputLabel-root"
          htmlFor="password"
        >
          Password
        </label>
        <div
          className="PasswordField-fullWidth PasswordField-root"
        >
          <div
            className="PasswordField-wrapper"
          >
            <input
              autoCapitalize="off"
              autoComplete="off"
              autoCorrect="off"
              className="PasswordField-colorError PasswordField-fullWidth PasswordField-input"
              data-testid="password-field"
              disabled={false}
              id="password"
              name="password"
              onBlur={[Function]}
              onChange={[Function]}
              onFocus={[Function]}
              placeholder="Password"
              spellCheck={false}
              type="password"
              value=""
            />
            <div
              className="PasswordField-icon"
              onClick={[Function]}
              onKeyUp={[Function]}
              role="button"
              tabIndex={0}
              title="Show password"
            >
              <i
                aria-hidden="true"
                className="Icon-root Icon-sm"
              >
                visibility
              </i>
            </div>
          </div>
        </div>
        <div
          className="Message-root Message-colorError Message-fullWidth"
        >
          <i
            aria-hidden="true"
            className="Icon-root Icon-sm MessageIcon-root"
          >
            warning
          </i>
          <span>
            This field is required.
          </span>
        </div>
        <div
          className="Box-root Flex-root Flex-flex Flex-justifyFlexEnd"
        >
          <a
            className="SignInWithEmail-textLink"
            href="/admin/forgot-password"
            onClick={[Function]}
          >
            Forgot your password?
          </a>
        </div>
      </div>
    </div>
    <button
      className="BaseButton-root Button-root Button-sizeLarge Button-colorRegular Button-variantRegular Button-uppercase Button-fullWidth"
      data-color="regular"
      data-variant="regular"
      disabled={false}
      onBlur={[Function]}
      onFocus={[Function]}
      onMouseOut={[Function]}
      onMouseOver={[Function]}
      onTouchEnd={[Function]}
      type="submit"
    >
      <i
        aria-hidden="true"
        className="Icon-root Icon-md ButtonIcon-root"
      >
        email
      </i>
      <span>
        Sign in with Email
      </span>
    </button>
  </div>
</form>
`;

exports[`checks for invalid email 1`] = `
<form
  autoComplete="off"
  onSubmit={[Function]}
>
  <div
    className="Box-root HorizontalGutter-root SignInWithEmail-container HorizontalGutter-full"
  >
    <div
      className="SignInWithEmail-field"
    >
      <div
        className="Box-root HorizontalGutter-root FormField-root HorizontalGutter-spacing-2"
      >
        <label
          className="InputLabel-root"
          htmlFor="email"
        >
          Email Address
        </label>
        <div
          className="TextField-root TextField-fullWidth"
        >
          <input
            className="TextField-input TextField-colorError"
            data-testid="email-field"
            disabled={false}
            id="email"
            name="email"
            onBlur={[Function]}
            onChange={[Function]}
            onFocus={[Function]}
            placeholder="Email Address"
            type="text"
            value="invalid-email"
          />
        </div>
        <div
          className="Message-root Message-colorError Message-fullWidth"
        >
          <i
            aria-hidden="true"
            className="Icon-root Icon-sm MessageIcon-root"
          >
            warning
          </i>
          <span>
            Please enter a valid email address.
          </span>
        </div>
      </div>
    </div>
    <div
      className="SignInWithEmail-field"
    >
      <div
        className="Box-root HorizontalGutter-root FormField-root HorizontalGutter-spacing-2"
      >
        <label
          className="InputLabel-root"
          htmlFor="password"
        >
          Password
        </label>
        <div
          className="PasswordField-fullWidth PasswordField-root"
        >
          <div
            className="PasswordField-wrapper"
          >
            <input
              autoCapitalize="off"
              autoComplete="off"
              autoCorrect="off"
              className="PasswordField-colorError PasswordField-fullWidth PasswordField-input"
              data-testid="password-field"
              disabled={false}
              id="password"
              name="password"
              onBlur={[Function]}
              onChange={[Function]}
              onFocus={[Function]}
              placeholder="Password"
              spellCheck={false}
              type="password"
              value=""
            />
            <div
              className="PasswordField-icon"
              onClick={[Function]}
              onKeyUp={[Function]}
              role="button"
              tabIndex={0}
              title="Show password"
            >
              <i
                aria-hidden="true"
                className="Icon-root Icon-sm"
              >
                visibility
              </i>
            </div>
          </div>
        </div>
        <div
          className="Message-root Message-colorError Message-fullWidth"
        >
          <i
            aria-hidden="true"
            className="Icon-root Icon-sm MessageIcon-root"
          >
            warning
          </i>
          <span>
            This field is required.
          </span>
        </div>
        <div
          className="Box-root Flex-root Flex-flex Flex-justifyFlexEnd"
        >
          <a
            className="SignInWithEmail-textLink"
            href="/admin/forgot-password"
            onClick={[Function]}
          >
            Forgot your password?
          </a>
        </div>
      </div>
    </div>
    <button
      className="BaseButton-root Button-root Button-sizeLarge Button-colorRegular Button-variantRegular Button-uppercase Button-fullWidth"
      data-color="regular"
      data-variant="regular"
      disabled={false}
      onBlur={[Function]}
      onFocus={[Function]}
      onMouseOut={[Function]}
      onMouseOver={[Function]}
      onTouchEnd={[Function]}
      type="submit"
    >
      <i
        aria-hidden="true"
        className="Icon-root Icon-md ButtonIcon-root"
      >
        email
      </i>
      <span>
        Sign in with Email
      </span>
    </button>
  </div>
</form>
`;

exports[`renders sign in form 1`] = `
<div>
  <div
    data-testid="authBox"
  >
    <div
      className="Box-root Flex-root Flex-flex Flex-justifyCenter"
    >
      <div
        className="Box-root HorizontalGutter-root AuthBox-container HorizontalGutter-double"
      >
        <div>
          <div
            className="Box-root Flex-root Flex-flex Flex-justifyCenter"
          >
            <div
              className="adminSignInTitle"
            >
              <div
                className="SignIn-title"
              >
                <span>
                  Sign in to
                </span>
              </div>
            </div>
          </div>
          <div
            className="BrandName-root BrandName-lg BrandName-alignCenter"
          >
            Coral
          </div>
        </div>
        <div
          className="Box-root HorizontalGutter-root HorizontalGutter-oneAndAHalf"
        >
          <form
            autoComplete="off"
            onSubmit={[Function]}
          >
            <div
              className="Box-root HorizontalGutter-root SignInWithEmail-container HorizontalGutter-full"
            >
              <div
                className="SignInWithEmail-field"
              >
                <div
                  className="Box-root HorizontalGutter-root FormField-root HorizontalGutter-spacing-2"
                >
                  <label
                    className="InputLabel-root"
                    htmlFor="email"
                  >
                    Email Address
                  </label>
                  <div
                    className="TextField-root TextField-fullWidth"
                  >
                    <input
                      className="TextField-input TextField-colorRegular"
                      data-testid="email-field"
                      disabled={false}
                      id="email"
                      name="email"
                      onBlur={[Function]}
                      onChange={[Function]}
                      onFocus={[Function]}
                      placeholder="Email Address"
                      type="text"
                      value=""
                    />
                  </div>
                </div>
              </div>
              <div
                className="SignInWithEmail-field"
              >
                <div
                  className="Box-root HorizontalGutter-root FormField-root HorizontalGutter-spacing-2"
                >
                  <label
                    className="InputLabel-root"
                    htmlFor="password"
                  >
                    Password
                  </label>
                  <div
                    className="PasswordField-fullWidth PasswordField-root"
                  >
                    <div
                      className="PasswordField-wrapper"
                    >
                      <input
                        autoCapitalize="off"
                        autoComplete="off"
                        autoCorrect="off"
                        className="PasswordField-colorRegular PasswordField-fullWidth PasswordField-input"
                        data-testid="password-field"
                        disabled={false}
                        id="password"
                        name="password"
                        onBlur={[Function]}
                        onChange={[Function]}
                        onFocus={[Function]}
                        placeholder="Password"
                        spellCheck={false}
                        type="password"
                        value=""
                      />
                      <div
                        className="PasswordField-icon"
                        onClick={[Function]}
                        onKeyUp={[Function]}
                        role="button"
                        tabIndex={0}
                        title="Show password"
                      >
                        <i
                          aria-hidden="true"
                          className="Icon-root Icon-sm"
                        >
                          visibility
                        </i>
                      </div>
                    </div>
                  </div>
                  <div
                    className="Box-root Flex-root Flex-flex Flex-justifyFlexEnd"
                  >
                    <a
                      className="SignInWithEmail-textLink"
                      href="/admin/forgot-password"
                      onClick={[Function]}
                    >
                      Forgot your password?
                    </a>
                  </div>
                </div>
              </div>
              <button
                className="BaseButton-root Button-root Button-sizeLarge Button-colorRegular Button-variantRegular Button-uppercase Button-fullWidth"
                data-color="regular"
                data-variant="regular"
                disabled={false}
                onBlur={[Function]}
                onFocus={[Function]}
                onMouseOut={[Function]}
                onMouseOver={[Function]}
                onTouchEnd={[Function]}
                type="submit"
              >
                <i
                  aria-hidden="true"
                  className="Icon-root Icon-md ButtonIcon-root"
                >
                  email
                </i>
                <span>
                  Sign in with Email
                </span>
              </button>
            </div>
          </form>
        </div>
      </div>
    </div>
  </div>
  <div
    className="Box-root Flex-root Flex-flex Flex-justifyCenter Flex-alignCenter"
  >
    <div
      className="Version-container"
    >
      vTest
    </div>
  </div>
</div>
`;

exports[`shows error when submitting empty form 1`] = `
<form
  autoComplete="off"
  onSubmit={[Function]}
>
  <div
    className="Box-root HorizontalGutter-root SignInWithEmail-container HorizontalGutter-full"
  >
    <div
      className="SignInWithEmail-field"
    >
      <div
        className="Box-root HorizontalGutter-root FormField-root HorizontalGutter-spacing-2"
      >
        <label
          className="InputLabel-root"
          htmlFor="email"
        >
          Email Address
        </label>
        <div
          className="TextField-root TextField-fullWidth"
        >
          <input
            className="TextField-input TextField-colorError"
            data-testid="email-field"
            disabled={false}
            id="email"
            name="email"
            onBlur={[Function]}
            onChange={[Function]}
            onFocus={[Function]}
            placeholder="Email Address"
            type="text"
            value=""
          />
        </div>
        <div
          className="Message-root Message-colorError Message-fullWidth"
        >
          <i
            aria-hidden="true"
            className="Icon-root Icon-sm MessageIcon-root"
          >
            warning
          </i>
          <span>
            This field is required.
          </span>
        </div>
      </div>
    </div>
    <div
      className="SignInWithEmail-field"
    >
      <div
        className="Box-root HorizontalGutter-root FormField-root HorizontalGutter-spacing-2"
      >
        <label
          className="InputLabel-root"
          htmlFor="password"
        >
          Password
        </label>
        <div
          className="PasswordField-fullWidth PasswordField-root"
        >
          <div
            className="PasswordField-wrapper"
          >
            <input
              autoCapitalize="off"
              autoComplete="off"
              autoCorrect="off"
              className="PasswordField-colorError PasswordField-fullWidth PasswordField-input"
              data-testid="password-field"
              disabled={false}
              id="password"
              name="password"
              onBlur={[Function]}
              onChange={[Function]}
              onFocus={[Function]}
              placeholder="Password"
              spellCheck={false}
              type="password"
              value=""
            />
            <div
              className="PasswordField-icon"
              onClick={[Function]}
              onKeyUp={[Function]}
              role="button"
              tabIndex={0}
              title="Show password"
            >
              <i
                aria-hidden="true"
                className="Icon-root Icon-sm"
              >
                visibility
              </i>
            </div>
          </div>
        </div>
        <div
          className="Message-root Message-colorError Message-fullWidth"
        >
          <i
            aria-hidden="true"
            className="Icon-root Icon-sm MessageIcon-root"
          >
            warning
          </i>
          <span>
            This field is required.
          </span>
        </div>
        <div
          className="Box-root Flex-root Flex-flex Flex-justifyFlexEnd"
        >
          <a
            className="SignInWithEmail-textLink"
            href="/admin/forgot-password"
            onClick={[Function]}
          >
            Forgot your password?
          </a>
        </div>
      </div>
    </div>
    <button
      className="BaseButton-root Button-root Button-sizeLarge Button-colorRegular Button-variantRegular Button-uppercase Button-fullWidth"
      data-color="regular"
      data-variant="regular"
      disabled={false}
      onBlur={[Function]}
      onFocus={[Function]}
      onMouseOut={[Function]}
      onMouseOver={[Function]}
      onTouchEnd={[Function]}
      type="submit"
    >
      <i
        aria-hidden="true"
        className="Icon-root Icon-md ButtonIcon-root"
      >
        email
      </i>
      <span>
        Sign in with Email
      </span>
    </button>
  </div>
</form>
`;

exports[`shows server error 1`] = `
<form
  autoComplete="off"
  onSubmit={[Function]}
>
  <div
    className="Box-root HorizontalGutter-root SignInWithEmail-container HorizontalGutter-full"
  >
    <div
      className="CallOut-root CallOut-colorError CallOut-fullWidth"
    >
      <div
        className="CallOut-inner"
      >
        Server Error
      </div>
    </div>
    <div
      className="SignInWithEmail-field"
    >
      <div
        className="Box-root HorizontalGutter-root FormField-root HorizontalGutter-spacing-2"
      >
        <label
          className="InputLabel-root"
          htmlFor="email"
        >
          Email Address
        </label>
        <div
          className="TextField-root TextField-fullWidth"
        >
          <input
            className="TextField-input TextField-colorRegular"
            data-testid="email-field"
            disabled={false}
            id="email"
            name="email"
            onBlur={[Function]}
            onChange={[Function]}
            onFocus={[Function]}
            placeholder="Email Address"
            type="text"
            value="hans@test.com"
          />
        </div>
      </div>
    </div>
    <div
      className="SignInWithEmail-field"
    >
      <div
        className="Box-root HorizontalGutter-root FormField-root HorizontalGutter-spacing-2"
      >
        <label
          className="InputLabel-root"
          htmlFor="password"
        >
          Password
        </label>
        <div
          className="PasswordField-fullWidth PasswordField-root"
        >
          <div
            className="PasswordField-wrapper"
          >
            <input
              autoCapitalize="off"
              autoComplete="off"
              autoCorrect="off"
              className="PasswordField-colorRegular PasswordField-fullWidth PasswordField-input"
              data-testid="password-field"
              disabled={false}
              id="password"
              name="password"
              onBlur={[Function]}
              onChange={[Function]}
              onFocus={[Function]}
              placeholder="Password"
              spellCheck={false}
              type="password"
              value="testtest"
            />
            <div
              className="PasswordField-icon"
              onClick={[Function]}
              onKeyUp={[Function]}
              role="button"
              tabIndex={0}
              title="Show password"
            >
              <i
                aria-hidden="true"
                className="Icon-root Icon-sm"
              >
                visibility
              </i>
            </div>
          </div>
        </div>
        <div
          className="Box-root Flex-root Flex-flex Flex-justifyFlexEnd"
        >
          <a
            className="SignInWithEmail-textLink"
            href="/admin/forgot-password"
            onClick={[Function]}
          >
            Forgot your password?
          </a>
        </div>
      </div>
    </div>
    <button
      className="BaseButton-root Button-root Button-sizeLarge Button-colorRegular Button-variantRegular Button-uppercase Button-fullWidth"
      data-color="regular"
      data-variant="regular"
      disabled={false}
      onBlur={[Function]}
      onFocus={[Function]}
      onMouseOut={[Function]}
      onMouseOver={[Function]}
      onTouchEnd={[Function]}
      type="submit"
    >
      <i
        aria-hidden="true"
        className="Icon-root Icon-md ButtonIcon-root"
      >
        email
      </i>
      <span>
        Sign in with Email
      </span>
    </button>
  </div>
</form>
`;

exports[`submits form successfully 1`] = `"http://localhost/admin/login"`;
